chore: Remove consensus-roster from gossip and consensus-utility (#27305)
Signed-off-by: Michael Heinrichs <netopyr@users.noreply.github.com>